--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Soumik Rakshit
-	email = soumik.rakshit@go-jek.com
+	email = unset@example.com
 [color]
 	diff = auto
 	status = auto
