--- a/i3/config
+++ b/i3/config
@@ -1,308 +1,218 @@
 # i3 config file (v4)
-#
-# Please see http://i3wm.org/docs/userguide.html for a complete reference!
-#
-# This config file uses keycodes (bindsym) and was written for the QWERTY
-# layout.
-#
-# To get a config file with the same key positions, but for your current
-# layout, use the i3-config-wizard
-#
+# Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below. ISO 10646 = Unicode
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+set $mod Mod1
 
-font pango: Mensch 16
+# This font is widely installed, provides lots of unicode glyphs, right-to-left
+# text rendering and scalability on retina/hidpi displays (thanks to pango).
+font pango:DejaVu Sans Mono 10
 
-# use Mouse+Mod1 to drag floating windows to their wanted position
-floating_modifier Mod1
+# Start XDG autostart .desktop files using dex. See also
+# https://wiki.archlinux.org/index.php/XDG_Autostart
+exec --no-startup-id dex --autostart --environment i3
+
+# The combination of xss-lock, nm-applet and pactl is a popular choice, so
+# they are included here as an example. Modify as you see fit.
+
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+# screen before suspend. Use loginctl lock-session to lock your screen.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+
+# NetworkManager is the most popular way to manage wireless networks on Linux,
+# and nm-applet is a desktop environment-independent system tray GUI for it.
+exec --no-startup-id nm-applet
+
+# Use pactl to adjust volume in PulseAudio.
+set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+
+# Use Mouse+$mod to drag floating windows to their wanted position
+# floating_modifier $mod
+
+# move tiling windows via drag & drop by left-clicking into the title bar,
+# or left-clicking anywhere into the window while holding the floating modifier.
+tiling_drag modifier titlebar
 
 # start a terminal
-bindsym Mod1+Return exec qterminal
+bindsym $mod+Return exec wezterm
 
 # kill focused window
-bindsym Mod1+Shift+q kill
+bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym Mod1+0 exec dmenu_run -fn "Mensch-18"
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym Mod1+d exec --no-startup-id i3-dmenu-desktop
+# start rofi (a program launcher)
+bindsym $mod+space exec --no-startup-id rofi -show drun
+bindsym $mod+Shift+d exec --no-startup-id rofi -show run
 
 # change focus
-bindsym Mod1+j focus left
-bindsym Mod1+k focus down
-bindsym Mod1+i focus up
-bindsym Mod1+l focus right
+bindsym $mod+j focus left
+bindsym $mod+k focus down
+bindsym $mod+l focus up
+bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
-bindsym Mod1+Left focus left
-bindsym Mod1+Down focus down
-bindsym Mod1+Up focus up
-bindsym Mod1+Right focus right
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
 
 # move focused window
-bindsym Mod1+Shift+j move left
-bindsym Mod1+Shift+k move down
-bindsym Mod1+Shift+i move up
-bindsym Mod1+Shift+l move right
+bindsym $mod+Shift+j move left
+bindsym $mod+Shift+k move down
+bindsym $mod+Shift+l move up
+bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
-bindsym Mod1+Shift+Left move left
-bindsym Mod1+Shift+Down move down
-bindsym Mod1+Shift+Up move up
-bindsym Mod1+Shift+Right move right
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
+
+bindsym $mod+Shift+b exec systemctl reboot
+bindsym $mod+Shift+p exec systemctl poweroff
 
 # split in horizontal orientation
-bindsym Mod1+h split h
+bindsym $mod+h split h
 
 # split in vertical orientation
-bindsym Mod1+v split v
+bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym Mod1+o fullscreen
+bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym Mod1+s layout stacking
-bindsym Mod1+w layout tabbed
-bindsym Mod1+e layout toggle split
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym Mod1+Shift+space floating toggle
+bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-
-bindsym Mod1+space exec rofi_run
+# bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym Mod1+a focus parent
+bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym Mod1+d focus child"
+#bindsym $mod+d focus child
+
+# Define names for default workspaces for which we configure key bindings later on.
+# We use variables to avoid repeating the names in multiple places.
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
 
 # switch to workspace
-bindsym Mod1+1 workspace 1
-bindsym Mod1+2 workspace 2
-bindsym Mod1+3 workspace 3
-bindsym Mod1+4 workspace 4
-bindsym Mod1+5 workspace 5
-bindsym Mod1+6 workspace 6
-bindsym Mod1+7 workspace 7
-bindsym Mod1+8 workspace 8
-bindsym Mod1+9 workspace 9
-# bindsym Mod1+ workspace 10
-
-bindsym Mod1+Control+l workspace next
-bindsym Mod1+Control+j workspace prev
+bindsym $mod+1 workspace number $ws1
+bindsym $mod+2 workspace number $ws2
+bindsym $mod+3 workspace number $ws3
+bindsym $mod+4 workspace number $ws4
+bindsym $mod+5 workspace number $ws5
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
+bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym Mod1+Shift+1 move container to workspace 1
-bindsym Mod1+Shift+2 move container to workspace 2
-bindsym Mod1+Shift+3 move container to workspace 3
-bindsym Mod1+Shift+4 move container to workspace 4
-bindsym Mod1+Shift+5 move container to workspace 5
-bindsym Mod1+Shift+6 move container to workspace 6
-bindsym Mod1+Shift+7 move container to workspace 7
-bindsym Mod1+Shift+8 move container to workspace 8
-bindsym Mod1+Shift+9 move container to workspace 9
-# bindsym Mod1+Shift+0 move container to workspace 10
-
-# Names of workspaces
-#workspace "1" output LVDS1
-#workspace "2" output LVDS1
-#workspace "3" output LVDS1
-#workspace "4" output LVDS1
-#workspace "5" output LVDS1
-#workspace "6" output LVDS1
-#workspace "7" output LVDS1
-#workspace "8" output LVDS1
+bindsym $mod+Shift+1 move container to workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # reload the configuration file
-bindsym Mod1+Shift+c reload
-
+bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym Mod1+Shift+r restart
-
+bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-		# These bindings trigger as soon as you enter the resize mode
+        # These bindings trigger as soon as you enter the resize mode
 
-		# Pressing left will shrink the window’s width.
-		# Pressing right will grow the window’s width.
-		# Pressing up will shrink the window’s height.
-		# Pressing down will grow the window’s height.
-		bindsym j           resize shrink width 10 px or 10 ppt
-		bindsym k           resize grow height 10 px or 10 ppt
-		bindsym l           resize shrink height 10 px or 10 ppt
-		bindsym semicolon   resize grow width 10 px or 10 ppt
+        # Pressing left will shrink the window's width.
+        # Pressing right will grow the window's width.
+        # Pressing up will shrink the window's height.
+        # Pressing down will grow the window's height.
+        bindsym j resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym l resize shrink height 10 px or 10 ppt
+        bindsym semicolon resize grow width 10 px or 10 ppt
 
-		# same bindings, but for the arrow keys
-		bindsym Left        resize shrink width 10 px or 10 ppt
-		bindsym Down        resize grow height 10 px or 10 ppt
-		bindsym Up          resize shrink height 10 px or 10 ppt
-		bindsym Right       resize grow width 10 px or 10 ppt
+        # same bindings, but for the arrow keys
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
 
-		# back to normal: Enter or Escape
-		bindsym Return mode "default"
-		bindsym Escape mode "default"
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+        bindsym $mod+r mode "default"
 }
 
-bindsym Mod1+r mode "resize"
+bindsym $mod+r mode "resize"
 
-# $i3-background
-exec_always --no-startup-id xsetroot -solid '#000000'
+# Window appearance
+for_window [class="^.*"] border pixel 2
+gaps inner 2
+gaps outer 2
 
-title_align center
+# Colors
+set $bg-color            #1E1E2E
+set $inactive-bg-color   #313244
+set $text-color          #CDD6F4
+set $inactive-text-color #A6ADC8
+set $urgent-bg-color     #F38BA8
+set $border-color        #89B4FA
+set $inactive-border-color #313244
 
-# new_window    1pixel                 broadcastM #<normal|1pixel|none|pixel>
-new_window normal
+# window colors
+#                       border              background         text                 indicator
+client.focused          $border-color       $bg-color          $text-color          #89B4FA
+client.unfocused        $inactive-border-color $inactive-bg-color $inactive-text-color #313244
+client.focused_inactive $inactive-border-color $inactive-bg-color $inactive-text-color #313244
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #F38BA8
 
-#new_float      normal                  #<normal|1pixel|none|pixel>
-hide_edge_borders none
+# # Start i3bar to display a workspace bar (plus the system information i3status
+# # finds out, if available)
+# bar {
+#         status_command i3status
+#         position top
+#         tray_output primary
+        
+#         colors {
+#                 background $bg-color
+#                 separator #757575
+#                 #                  border             background         text
+#                 focused_workspace  $border-color      $bg-color          $text-color
+#                 inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+#                 urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+#         }
+# }
 
+# Additional keybindings
+bindsym $mod+Shift+x exec i3lock
+bindsym $mod+Shift+s exec --no-startup-id maim -s | xclip -selection clipboard -t image/png
+bindsym Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
 
-# Window color settings
-# class                 border  backgr. text    indicator
-client.focused          #4C566A #e0a0fe #2E3440 #EBCB8B   #5E81AC
-client.focused_inactive #2E3440 #4C566A #ECEFF4 #8FBCBB   #434C5E
-client.unfocused        #2E3440 #2E3440 #4C566A #8FBCBB   #3B4252
-client.urgent           #BF616A #BF616A #2E3440 #BF616A   #BF616A
-client.placeholder      #88C0D0 #2E3440 #B48EAD #2E3440   #2E3440
-client.background       #D8DEE9
-
-set $base00 #101218
-set $base01 #1f222d
-set $base02 #252936
-set $base03 #5e81ac  
-set $base04 #C0C5CE
-set $base05 #d1d4e0
-set $base06 #C9CCDB
-set $base07 #ffffff
-set $base08 #ee829f
-set $base09 #f99170
-set $base0A #ffefcc
-set $base0B #a5ffe1
-set $base0C #97e0ff
-set $base0D #97bbf7
-set $base0E #c0b7f9
-set $base0F #fcc09e
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status | i3-keyboard-layout i3status
-        #position top
-        font pango: Mensch 18
-
-        colors {
-            separator  $base01
-            background $base01
-            statusline #81a1c1
-              
-            #                   border  background text
-            focused_workspace  $base01 $base01    #81a1c1 
-            active_workspace   $base01 $base02    $base03
-            inactive_workspace $base01 $base01    #4c566a
-            urgent_workspace   $base01 $base01    $base08
-            binding_mode       $base01 #81a1c1    #2e3440
-        }
-        height 30
-}
-
-# GAPS
-smart_gaps on
-workspace 1 gaps inner 2
-workspace 1 gaps outer 2
-workspace 2 gaps inner 2
-workspace 2 gaps outer 2
-gaps outer 10
-
-
-# smart_borders on
-
-# editors
-bindsym Mod4+e exec nvim-qt
-bindsym Mod4+Shift+e exec subl
-
-# ide
-bindsym Mod4+i exec qtcreator -style=gtk
-
-# document readers
-bindsym Mod4+r exec evince
-
-# terminal emulator
-bindsym Mod4+t exec termite
-bindsym Mod4+Shift+t exec urxvt -e nvim -c terminal
-# web browser
-bindsym Mod4+w exec firefox
-
-# file managers
-bindsym Mod4+f exec thunar
-bindsym Mod4+Shift+f exec urxvt -e ranger
-
-# alsamixer(audio volume)
-bindsym Mod4+s exec urxvt -e alsamixer
-
-# i3lock
-bindsym Mod4+l exec i3lock
-
-# quickterm
-bindsym Mod4+p exec i3-quickterm
-
-#######
-
-# Keyboard
-bindsym Mod4+space exec i3-keyboard-layout cycle us ru
-
-# poweroff
-bindsym Mod1+Shift+p exec systemctl poweroff
-
-# suspend
-# bindsym Mod1+Shift+s exec systemctl suspend
-
-# hibernate
-bindsym Mod1+Shift+g exec systemctl hibernate
-
-# reboot
-bindsym Mod1+Shift+b exec systemctl reboot
-
-# screen brightness inc/dec
-bindsym Mod1+Shift+u exec ddc_set_brightness.py 10 --add
-bindsym Mod1+Shift+y exec ddc_set_brightness.py 10 --sub
-
-# Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
-
-# Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
-
-# Touchpad controls
-bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
-
-# Media player controls
-bindsym XF86AudioPlay exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
-
-# autostart
-
-#exec --no-startup-id nm-applet
-exec parcellite
-exec xrdb /home/rksht/.Xresources
-exec sh ~/.fehbg
-exec xcompmgr -c -l0 -t0 -r0 -o.00
-
-exec xset r rate 250 45
-exec xset m 1 1
-exec setxkbmap -option "numpad:microsoft"
-exec setxkbmap -layout us -option ctrl:nocaps
-exec alttab
+# Auto-start applications
+exec --no-startup-id picom -b
+exec --no-startup-id /home/rksht/.local/bin/wallpaper.py
